Update and rename mine2.html to index.html

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 <body>
   <!-- Landing Page -->
   <div id="landingPage">
-    <h1>Made with Love for Amelia 💖</h1>
+    <h1>Made with Love for Lily Olivia 💖</h1>
     <label for="gridSize">Choose Grid Size:</label>
     <select id="gridSize" name="gridSize">
       <option value="8">8 x 8</option>
